crates/sith_server/src/session/snapshots/sith_server__session__settings__tests__global_only_resolves_correctly.snap
---
source: crates/sith_server/src/session/settings.rs
expression: options
---
GlobalOnly {
    settings: ClientSettings {
        interpreter: Some(
            "/usr/bin/python",
        ),
        ruff: Some(
            RuffOptions {
                path: Some(
                    "/usr/bin/ruff",
                ),
                format: Some(
                    FormatOptions {
                        enable: Some(
                            true,
                        ),
                        args: Some(
                            [
                                "--line-length 80",
                            ],
                        ),
                    },
                ),
                lint: None,
            },
        ),
        tracing: TracingSettings {
            log_level: None,
            log_file: None,
        },
    },
}
