crates/sith_server/src/session/snapshots/sith_server__session__settings__tests__vs_code_init_options_deserialize.snap
---
source: crates/sith_server/src/session/settings.rs
expression: options
---
HasWorkspaces {
    global_settings: ClientSettings {
        interpreter: Some(
            "",
        ),
        ruff: Some(
            RuffOptions {
                path: Some(
                    "",
                ),
                format: Some(
                    FormatOptions {
                        enable: Some(
                            false,
                        ),
                        args: Some(
                            [],
                        ),
                    },
                ),
                lint: None,
            },
        ),
        tracing: TracingSettings {
            log_level: None,
            log_file: None,
        },
    },
    workspace_settings: [
        WorkspaceSettings {
            settings: ClientSettings {
                interpreter: Some(
                    "/Users/test/projects/pandas/.venv/bin/python",
                ),
                ruff: Some(
                    RuffOptions {
                        path: Some(
                            "ruff",
                        ),
                        format: Some(
                            FormatOptions {
                                enable: Some(
                                    true,
                                ),
                                args: Some(
                                    [],
                                ),
                            },
                        ),
                        lint: None,
                    },
                ),
                tracing: TracingSettings {
                    log_level: None,
                    log_file: None,
                },
            },
            workspace: "file:///Users/test/projects/pandas",
        },
        WorkspaceSettings {
            settings: ClientSettings {
                interpreter: Some(
                    "/Users/test/projects/scipy/.venv/bin/python",
                ),
                ruff: Some(
                    RuffOptions {
                        path: Some(
                            "ruff",
                        ),
                        format: Some(
                            FormatOptions {
                                enable: Some(
                                    false,
                                ),
                                args: Some(
                                    [],
                                ),
                            },
                        ),
                        lint: None,
                    },
                ),
                tracing: TracingSettings {
                    log_level: None,
                    log_file: None,
                },
            },
            workspace: "file:///Users/test/projects/scipy",
        },
    ],
}
